--- a/templates/base.html
+++ b/templates/base.html
@@ -106,7 +106,9 @@
             Generally, this technology works best if it uses multiple modalities (audio, video, and text together) in context.
             <br>
             <br>
-            Here, I'm trying to recognize emotions using speech. I hope you have fun playing around with this webapp!</p>
+            Here, I'm trying to recognize emotions using speech. I hope you have fun playing around with this webapp!
+            <br>Check out my blog 'jamb' (linked in the footer) if you have a minute!
+        </p>
 
         <!-- Main Input For Receiving Query to our ML -->
 
